--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -1,17 +1,9 @@
 {
   "train_batch_size": 8,
-  "gradient_accumulation_steps": 8,
   "fp16": {
     "enabled": true
   },
   "zero_optimization": {
-    "stage": 2,
-    "allgather_partitions": true,
-    "reduce_scatter": true,
-    "allgather_bucket_size": 500000000,
-    "reduce_bucket_size": 500000000,
-    "overlap_comm": true,
-    "contiguous_gradients": true
+    "stage": 2
   }
 }
-
