--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -1,9 +1,9 @@
 {
-  "train_batch_size": 8,
+  "train_batch_size": "auto",
   "fp16": {
     "enabled": true
   },
   "zero_optimization": {
-    "stage": 2
+    "stage": 3
   }
 }
